AyaSpirit 1.0.6, 2016-10-30
------------------------
- bug fixes

AyaSpirit 1.0.5, 2016-09-27
------------------------
- bug fixes

AyaSpirit 1.0.4, 2016-09-25
------------------------
- bug fixes

AyaSpirit 1.0.3, 2016-09-21
------------------------
- update the .pot file

AyaSpirit 1.0.2, 2016-09-21
------------------------
- bug fixes

AyaSpirit 1.0.1, 2016-09-06
------------------------
- bug fixes

AyaSpirit 1.0.0, 2016-08-11
------------------------
- Initial release