@@ -3,17 +3,6 @@ Theme Name: AyaSpirit
 Description: Used to style the TinyMCE editor.
 */
 
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.0.5');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.0.5') format('embedded-opentype'),
-	   url('../fonts/fontawesome-webfont.woff?v=4.0.5') format('woff'),
-	   url('../fonts/fontawesome-webfont.ttf?v=4.0.5') format('truetype'),
-	   url('../fonts/fontawesome-webfont.svg?v=4.0.5#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 h1,
 h2,
 h3,
