@@ -4,9 +4,9 @@ Description: AyaSpirit is a Fully Responsive WordPress Theme, a perfect choice f
 Theme URI: https://ayatemplates.com/product/ayaspirit
 Author: ayatemplates
 Author URI: https://ayatemplates.com
-Version: 1.0.6
+Version: 1.0.7
 Text Domain: ayaspirit
-Tags: blog, two-columns, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: blog, two-columns, right-sidebar, custom-background, custom-logo, custom-colors, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -228,6 +228,11 @@ dt.gallery-icon > a:before,
 .gallery-columns-8 .gallery-caption,
 .gallery-columns-9 .gallery-caption {
 	display: none;
+}
+
+#header-logo > a.custom-logo-link,
+#header-logo #site-identity {
+    display:inline-block;
 }
 
 #header-logo h1 {
