@@ -1,3 +1,7 @@
+AyaSpirit 1.0.7, 2016-11-05
+------------------------
+- bug fixes
+
 AyaSpirit 1.0.6, 2016-10-30
 ------------------------
 - bug fixes
